examples/errors/identification/duplicated_record_field.xana
a :: defstruct do
    c :: int
    b :: double
    c :: char # Field already declared in struct
end

def main() do end
